--- a/thermo/assets/style.css
+++ b/thermo/assets/style.css
@@ -101,3 +101,26 @@ body {
     font-weight: bold;
     color: #FF6839;
 }
+
+.menu-reset {
+    display: inline-block;
+    margin: auto 0;
+}
+
+.menu-reset button {
+    padding: 0.7em 1.8em;
+    margin: 0 0.3em 0.8em 0;
+    border-radius: 2em;
+    box-sizing: border-box;
+    text-decoration: none;
+    color: #FFFFFF;
+    background-color: #62b1f6;
+    text-align: center;
+    transition: all 0.2s;
+    border: none;
+    font-weight: bold;
+}
+
+.menu button:hover {
+    background-color: #ff6839;
+}
